--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -18,17 +18,17 @@ jobs:
       - name: switch-branch
         run: git checkout rk356x-ebc-dev
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- pinenote_defconfig
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- pinenote_defconfig
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- all
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- all
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=${PWD}/pack modules_install
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=${PWD}/pack modules_install
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- dtbs
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- dtbs
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
         working-directory: ./linux
-      - run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
+      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
         working-directory: ./linux
       - name: build-zip
         run: |
