Cache kernel source

--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -13,31 +13,43 @@ jobs:
           sudo apt update
           sudo apt build-dep -y linux-base
           sudo apt install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu git flex bison bc zip
-      - name: fetch
+      - name: Cache Kernel Source
+        id: cache-source
+        uses: actions/cache@v2
+        with:
+          path: linux
+          key: ${{ runner.os }}-${{ steps.version.outputs.version }}
+          restore-keys: |
+            ${{ runner.os }}-
+      - name: clone
         run: git clone https://github.com/smaeul/linux.git; 
+        if: steps.cache-source.outputs.cache-hit != 'true'
       - name: switch-branch
         run: git checkout rk356x-ebc-dev
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- pinenote_defconfig
+      - name: fetch
+        run: git pull
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- all
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- pinenote_defconfig
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=${PWD}/pack modules_install
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- all
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- dtbs
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=${PWD}/pack modules_install
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- dtbs
+        working-directory: ./linux
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
         working-directory: ./linux
       - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
         working-directory: ./linux
       - name: build-zip
         run: |
           mkdir output
-          mv linux/arch/arm64/boot/Image output/
-          rm linux/pack/lib/modules/5*/build
-          rm linux/pack/lib/modules/5*/source
-          mv linux/pack/lib/modules output/
-          mv linux/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/
+          mv build/arch/arm64/boot/Image output/
+          rm build/pack/lib/modules/5*/build
+          rm build/pack/lib/modules/5*/source
+          mv build/pack/lib/modules output/
+          mv build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/
           mv *deb output/
           cd output && zip ../release.zip -r *
       - name: sams-version
