--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -12,12 +12,17 @@ jobs:
         run: |
           sudo apt update
           sudo apt build-dep -y linux-base
-          sudo apt install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu git flex bison bc zip
+          sudo apt install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu git flex bison bc zip jq
+      - name: sams-version
+        run: echo "::set-output name=version::$(curl -s -L https://api.github.com/repos/smaeul/linux/git/refs/heads/rk356x-ebc-dev | jq '.object.sha' -r | cut -c 1-7)"
+        id: version
       - name: Cache Kernel Source
         id: cache-source
         uses: actions/cache@v2
         with:
-          path: linux
+          path: |
+            linux
+            build
           key: ${{ runner.os }}-${{ steps.version.outputs.version }}
           restore-keys: |
             ${{ runner.os }}-
@@ -40,7 +45,7 @@ jobs:
         working-directory: ./linux
       - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
         working-directory: ./linux
-      - run: make -j $(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
         working-directory: ./linux
       - name: build-zip
         run: |
