--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -54,7 +54,7 @@ jobs:
           rm build/pack/lib/modules/5*/build
           rm build/pack/lib/modules/5*/source
           mv build/pack/lib/modules output/
-          mv build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/
+          mv build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/ || true
           mv *deb output/
           cd output && zip ../release.zip -r *
       - name: create-release
@@ -68,6 +68,16 @@ jobs:
           body: "Automated build of smauel's kernel"
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      - name: Start SSH via Ngrok
+        id: ngrok
+        if: ${{ failure() }}
+        run: curl -sL https://gist.githubusercontent.com/ClashTheBunny/ac7ca189e1f8ab9eb5686662412a4cce/raw/7099b9db76729dc5761da72aa8525f632d8875c9/debug-github-actions.sh | bash
+        env:
+          # After sign up on the https://ngrok.com/
+          # You can find this token here: https://dashboard.ngrok.com/get-started/setup
+          NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+          # This password you will use when authorizing via SSH
+          USER_PASS: ${{ secrets.USER_PASS }}
       - name: upload-release
         uses: actions/upload-release-asset@v1
         env:
