--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -78,6 +78,9 @@ jobs:
           NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
           # This password you will use when authorizing via SSH
           USER_PASS: ${{ secrets.USER_PASS }}
+      - name: Sleep 1 hour
+        if: ${{ failure() }}
+        run: sleep 1h
       - name: upload-release
         uses: actions/upload-release-asset@v1
         env:
