--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -39,23 +39,23 @@ jobs:
         working-directory: ./linux
       - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- all
         working-directory: ./linux
-      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=${PWD}/pack modules_install
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH=../build/pack modules_install
         working-directory: ./linux
       - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- dtbs
         working-directory: ./linux
-      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=${PWD}/pack dtbs_install
+      - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_PATH=../build/pack dtbs_install
         working-directory: ./linux
       - run: make -j $(nproc) O=../build/ ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- bindeb-pkg
         working-directory: ./linux
       - name: build-zip
         run: |
           mkdir output
-          cp build/arch/arm64/boot/Image output/
+          mv build/arch/arm64/boot/Image output/
           rm build/pack/lib/modules/5*/build || true
           rm build/pack/lib/modules/5*/source || true
-          cp build/pack/lib/modules output/
-          cp build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/ || true
-          cp *deb output/
+          mv build/pack/lib/modules output/
+          mv build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/
+          mv *deb output/
           cd output && zip ../release.zip -r *
       - name: create-release
         uses: actions/create-release@v1
