Properly tag release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,6 +51,9 @@ jobs:
           mv build/pack/dtbs/5*/rockchip/rk3566-pinenote.dtb output/
           mv *deb output/
           cd output && zip ../release.zip -r *
+      - name: sams-version
+        run: echo "::set-output name=version::$(cat latest_kernel)"
+        id: version
       - name: create-release
         uses: actions/create-release@v1
         id: create_release
